<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/white_white_corner_shape">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_login_input_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/home_login_username_rl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/white_corner_gray_shape"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/username_tv"
                            android:layout_width="@dimen/image_wight"
                            android:layout_height="@dimen/image_height"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:singleLine="true"
                            android:src="@mipmap/login_account" />

                        <EditText
                            android:id="@+id/home_login_username_et"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toRightOf="@id/username_tv"
                            android:background="@null"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:hint="@string/usernamehint"
                            android:inputType="number"
                            android:maxLength="11"
                            android:padding="15.0dip"
                            android:singleLine="true"
                            android:textColor="@color/standard_textcolor_c2"
                            android:textColorHint="@color/standard_textcolor_c3"
                            android:textCursorDrawable="@drawable/edittext_color"
                            android:textSize="@dimen/standard_textsize_f2" />

                        <LinearLayout
                            android:id="@+id/home_login_delete_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5.0dip"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/home_login_delete_ib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:padding="5.0dip"
                                android:src="@mipmap/icon_delete"
                                android:visibility="gone" />

                            <ImageButton
                                android:id="@+id/home_login_history_ib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:padding="5.0dip"
                                android:src="@mipmap/home_login_input_arrowdown"
                                android:visibility="gone" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/white_corner_gray_shape"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/password_tv"
                            android:layout_width="@dimen/image_wight"
                            android:layout_height="@dimen/image_height"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:singleLine="true"
                            android:src="@mipmap/login_pwd" />

                        <EditText
                            android:id="@+id/home_login_password_et"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toRightOf="@id/password_tv"
                            android:background="@null"
                            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/password"
                            android:inputType="textPassword|"
                            android:maxLength="18"
                            android:maxLines="1"
                            android:padding="15.0dip"
                            android:textColor="@color/standard_textcolor_c2"
                            android:textColorHint="@color/standard_textcolor_c3"
                            android:textCursorDrawable="@drawable/edittext_color"
                            android:textSize="@dimen/standard_textsize_f2" />

                        <LinearLayout
                            android:id="@+id/home_password_delete_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5.0dip"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/home_password_delete_ib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:padding="5.0dip"
                                android:src="@mipmap/icon_delete"
                                android:visibility="gone" />

                            <ImageButton
                                android:id="@+id/home_password_history_ib"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:padding="5.0dip"
                                android:src="@mipmap/home_login_input_arrowdown"
                                android:visibility="gone" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/home_login_vertifycode_rl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10.0dip"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/home_login_vertifyCode_et"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10.0dip"
                            android:layout_toLeftOf="@+id/home_login_vertifycode_iv"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/inputvertifycode"
                            android:imeOptions="actionDone"
                            android:maxLength="4"
                            android:padding="5.0dip"
                            android:singleLine="true"
                            android:textColor="@color/standard_textcolor_c2"
                            android:textColorHint="@color/standard_textcolor_c3"
                            android:textCursorDrawable="@drawable/edittext_color"
                            android:textSize="@dimen/standard_textsize_f2" />

                        <ImageView
                            android:id="@+id/home_login_vertifycode_iv"
                            android:layout_width="65.0dip"
                            android:layout_height="35.0dip"
                            android:layout_centerVertical="true"
                            android:scaleType="fitXY" />

                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/home_login_login_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15.0dip"
                    android:background="@drawable/shape_enable_bluegray_corner1_selector"
                    android:gravity="center"
                    android:paddingBottom="10.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_size_20sp_T20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:id="@+id/home_login_forgetpasswrod_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/forgetpassword"
                        android:textColor="@color/tabIndicator_color"
                        android:textSize="@dimen/standard_textsize_f4" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="20dp"
                      android:background="@color/agree_txt_color"></View>

                    <TextView
                        android:id="@+id/home_login_regist_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fastregist"
                        android:textColor="@color/dantuo_zhushi_blue"
                        android:textSize="@dimen/standard_textsize_f4" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
